# flyrank/assignment-04-Auth-Login_protect/src/routes/protected.routes.js
@@ -1,0 +1,8 @@
+import express from 'express'
+import {getProfile} from "../controllers/protected.controller.js";
+
+const router= express.Router();
+
+router.get("/profile",getProfile);
+
+export default router;
