# flyrank/assignment-04-Auth-Login_protect/src/routes/public.routes.js
@@ -1,0 +1,8 @@
+import express from 'express';
+import {getPublicInfo} from '../controllers/public.controller.js';
+
+const router= express.Router();
+
+router.get('/info',getPublicInfo);
+
+export default router;
